# SqlExec

./: .gitignore  LICENSE  README.md  build.bat  convert_icon.py  pyproject.toml  setup.py
src/sqlexec/: __main__.py
src/sqlexec/config/: __init__.py  config_manager.py  db_types.py  default_config.toml  enums.py  settings.py
src/sqlexec/core/: __init__.py  db_manager.py
src/sqlexec/db/: db_manager.py
src/sqlexec/resources/: resources.qrc
src/sqlexec/ui/: __init__.py  add_connection_dialog.py  main_window.py  query_editor.py  settings_dialog.py  sidebar.py
src/sqlexec/utils/: __init__.py  logger.py
