[project]
name = "sqlexec"
version = "0.1.0"
description = "A SQL execution application with multi-database support"
requires-python = "==3.12.8"
authors = []
dependencies = [
    "PySide6>=6.6.0",
    "SQLAlchemy>=2.0.0",
    "toml>=0.10.2",
    "pymssql>=2.2.8",  # SQL Server
    "mysqlclient>=2.2.0",  # MySQL
    "psycopg2-binary>=2.9.9",  # PostgreSQL
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.12.0"
]

[project.scripts]
build-exe = "pyinstaller:run_build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sqlexec"] 

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
]
